# shamal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: airgap.md  ci.md  configuration.md
openspec/: config.yaml
openspec/changes/add-shamal-mvp/: tasks.md
openspec/changes/add-shamal-mvp/specs/result-investigation/: spec.md
openspec/changes/add-shamal-mvp/specs/scenario-generation/: spec.md
openspec/changes/archive/2026-07-03-add-shamal-mvp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-03-add-shamal-mvp/specs/cli-core/: spec.md
openspec/changes/archive/2026-07-03-add-shamal-mvp/specs/llm-providers/: spec.md
openspec/changes/archive/2026-07-03-add-shamal-mvp/specs/reporting/: spec.md
openspec/changes/archive/2026-07-03-add-shamal-mvp/specs/test-execution/: spec.md
openspec/specs/cli-core/: spec.md
openspec/specs/llm-providers/: spec.md
openspec/specs/reporting/: spec.md
openspec/specs/result-investigation/: spec.md
openspec/specs/scenario-generation/: spec.md
openspec/specs/test-execution/: spec.md
src/shamal/: __init__.py  agent.py  analysis.py  cli.py  config.py  engine.py  exitcodes.py  finding.py  generate.py  har.py  ingest.py  llm.py  openapi.py  prometheus.py  report.py  results.py  scenario.py
tests/: conftest.py  test_agent.py  test_analysis.py  test_cli.py  test_config.py  test_e2e.py  test_engine.py  test_har.py  test_ingest.py  test_integration.py  test_investigate_cli.py  test_llm.py  test_openapi.py  test_plan_cli.py  test_prometheus.py  test_report.py  test_results.py  test_run_cli.py  test_scenario.py
tests/fixtures/: existing.k6.js  petstore.yaml  session.har
