[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shamal"
version = "0.1.0"
description = "Open-source agentic performance testing: generate, run, and investigate load tests with an AI agent"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Shamal contributors" }]
keywords = ["performance-testing", "load-testing", "k6", "ai", "agent", "sre"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing :: Traffic Generation",
]
dependencies = [
    "typer>=0.12",
    "litellm>=1.60",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/shamal-io/shamal"
Repository = "https://github.com/shamal-io/shamal"
Issues = "https://github.com/shamal-io/shamal/issues"

[project.scripts]
shamal = "shamal.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-httpserver>=1.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shamal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires a real k6 binary and network (opt-in: -m integration)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "litellm.*"
ignore_missing_imports = true
